--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@
 #app {
     height: 100vh;
     width: 100%;
-    background-color: pink;
     padding-top: 30px;
     padding-bottom: 30px;
     background: linear-gradient(180deg, #009688 18%, #EAEAEA 18.01%);
-    
+
 }
 
 ul {
@@ -21,7 +20,7 @@ ul {
 
 .wrapper {
     height: calc(100vh - 60px);
-    background-color: aqua;
+    width: 100%;
 
 }
 
@@ -62,12 +61,17 @@ ul {
     width: 50px;
 }
 
+.find-chat {
+    height: 10px;
+}
 .chat {
     overflow-y: auto;
 }
 
 .contacts {
-    overflow: hidden;
+    overflow-y: auto;
     width: 100%;
-    height: calc(100% - 70px)
+    height: calc(100% - 80px);
+    max-height: calc(100% - 80px);
+
 }
