--- a/style.css
+++ b/style.css
@@ -115,26 +115,35 @@
  border-radius: 10px;
  padding: 10px;
  margin: 7px;
+ z-index: 0;
 }
 
 .sent {
 background-color: var(--green);
 margin-left: auto;
-top: 40px;
-right: 10px;
-z-index: 20400;
+}
+
+.delete-message.sent {
+    bottom: -50px;
+   right: 10px;
+    z-index: 20400;
 }
 
 .received {
 background-color: white;
 margin-right: auto;
-top: 40px;
-left: 10px;
-z-index: 2000;
+}
+
+.delete-message.received {
+    bottom: -50px;
+    left: 10px;
+    z-index: 2000;
 }
 
 .delete-message {
     width: 100px;
-    height: 50px;
+    height: 45px;
     font-size: 14px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 1px 3px #666
 }
